welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {

def posFinale():Boolean={
	if(getX()==((getMondeHauteur()-1) && getY() == (getMondeHauteur()-1))){true}else{false}
}
var x = 0
while(!posFinale()){
	for(c<-0 to getMondeLargeur() - 1){
		for (l <- 0 to getMondeHauteur()-1){
			ecritMessage(""+x)
			x = x+1
			setPos(c,l)
		}
		setPos(c,0)
	}
}

}
